salvando arquivos de css e treinos de css.

--- a/pizza-Portuguesa.html
+++ b/pizza-Portuguesa.html
@@ -2,7 +2,7 @@
 
 <head>
 <title>Pizza Portuguesa</title>
-
+<link rel="stylesheet" href="style.css">
 
   
 </head>
@@ -15,11 +15,11 @@
   <li>queijo</li>
   <li>calabresa</li>
 </ul>
-<!--add in github-->
+<!--add in github -->
 <ol>
 <li><a href="pizza-mussarela.html">Mussarela</a></li>
 <li><a href="pizza-calabresa.html">calabresa</a></li>
-<li>Portuguesa</li>
+<li><a href="pizza-Portuguesa.html">Portuguesa</a></li>
 </ol>
 
 </body>
