--- a/pizza-calabresa.html
+++ b/pizza-calabresa.html
@@ -1,5 +1,5 @@
 <html lang="pt-BR">
-
+<link rel="stylesheet" href="style.css">
 <head>
 <title>Pizzaria</title>
 
@@ -18,7 +18,7 @@
 
 <ol>
 <li><a href="pizza-mussarela.html">Mussarela</a></li>
-<li>calabresa</li>
+<li><a href="pizza-calabresa.html">calabresa</a></li>
 <li><a href="pizza-Portuguesa.html">Portuguesa</a></li>
 </ol>
 
