--- a/pizza-mussarela.html
+++ b/pizza-mussarela.html
@@ -1,5 +1,5 @@
 <html lang="pt-BR">
-
+  <link rel="stylesheet" href="style.css">
 <head>
 <title>Pizzaria</title>
 
@@ -17,7 +17,7 @@
 </ul>
 
 <ol>
-<li>mussarela</li>
+<li><a href="pizza-mussarela.html">mussarela</a></li>
 <li><a href="pizza-calabresa.html">calabresa</a></li>
 <li><a href="pizza-Portuguesa.html">Portuguesa</a></li>
 </ol>
