salvei o script adicionado

--- a/pizza-Portuguesa.html
+++ b/pizza-Portuguesa.html
@@ -22,6 +22,18 @@
 <li><a href="pizza-Portuguesa.html">Portuguesa</a></li>
 </ol>
 
+<button id="botao">Teste Me</button>
+<script>
+  
+var meuBotao = document.querySelector("#botao");
+
+function mostrarAviso() {
+  alert("Oi Você me clicou");
+}
+meuBotao.addEventListener('click',mostrarAviso);
+
+</script>
+
 </body>
 
 
